// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequiredField renders with structure-level 1`] = `
<DocumentFragment>
  <div
    class="form-renderer-required-field d-flex justify-content-between"
  >
    <div
      class="form-group form-renderer-required-field__input"
    >
      <label
        class="toggle-switch simple-toggle-switch"
      >
        <span
          class="toggle-switch-check-bar"
        >
          <input
            checked=""
            class="toggle-switch-check"
            type="checkbox"
            value=""
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
        </span>
        <span
          class="toggle-switch-label"
        >
          required-field
        </span>
      </label>
    </div>
    <button
      class="form-renderer-required-field__button btn btn-monospaced btn-outline-borderless btn-sm btn-outline-secondary"
      title="required-options"
      type="button"
    >
      <svg
        class="lexicon-icon lexicon-icon-ellipsis-v"
        role="presentation"
      >
        <use
          xlink:href="#ellipsis-v"
        />
      </svg>
    </button>
    <div
      class="form-renderer-required-field__popover popover clay-popover-bottom-right"
    >
      <div
        class="arrow"
      />
      <div
        class="inline-scroller"
        tabindex="-1"
      >
        <div
          class="popover-header"
        >
          required-options
        </div>
        <div
          class="popover-body"
        >
          <div
            class="mt-2"
          >
            <div
              class=""
            >
              <div
                class="custom-control custom-radio"
              >
                <label>
                  <input
                    checked=""
                    class="custom-control-input"
                    role="radio"
                    type="radio"
                    value="structure-level"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      for-all-forms-using-this-field
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="custom-control custom-radio"
              >
                <label>
                  <input
                    class="custom-control-input"
                    role="radio"
                    type="radio"
                    value="view-level"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      only-for-this-form
                    </span>
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RequiredField renders with view-level 1`] = `
<DocumentFragment>
  <div
    class="form-renderer-required-field d-flex justify-content-between"
  >
    <div
      class="form-group form-renderer-required-field__input"
    >
      <label
        class="toggle-switch simple-toggle-switch"
      >
        <span
          class="toggle-switch-check-bar"
        >
          <input
            class="toggle-switch-check"
            type="checkbox"
            value=""
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
        </span>
        <span
          class="toggle-switch-label"
        >
          required-field
        </span>
      </label>
    </div>
    <button
      class="form-renderer-required-field__button btn btn-monospaced btn-outline-borderless btn-sm btn-outline-secondary"
      disabled=""
      title="required-options"
      type="button"
    >
      <svg
        class="lexicon-icon lexicon-icon-ellipsis-v"
        role="presentation"
      >
        <use
          xlink:href="#ellipsis-v"
        />
      </svg>
    </button>
    <div
      class="form-renderer-required-field__popover popover clay-popover-bottom-right"
    >
      <div
        class="arrow"
      />
      <div
        class="inline-scroller"
        tabindex="-1"
      >
        <div
          class="popover-header"
        >
          required-options
        </div>
        <div
          class="popover-body"
        >
          <div
            class="mt-2"
          >
            <div
              class=""
            >
              <div
                class="custom-control custom-radio"
              >
                <label>
                  <input
                    class="custom-control-input"
                    role="radio"
                    type="radio"
                    value="structure-level"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      for-all-forms-using-this-field
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="custom-control custom-radio"
              >
                <label>
                  <input
                    checked=""
                    class="custom-control-input"
                    role="radio"
                    type="radio"
                    value="view-level"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      only-for-this-form
                    </span>
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
